--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend project mypos (Project KP)",
   "main": "src/main.js",
   "scripts": {
-    "test": "jest -i"
+    "test": "jest -i",
+    "start": "node src/main.js"
   },
   "jest": {
     "transform": {
